# xargcomplete

./: .coveragerc  .flake8  .xproject_python  Makefile  pyproject.toml  readme.md  requirements.txt  setup.cfg
toolkit/: memory.py
xargcomplete/: attribute.py  command.py  complete.py
xargcomplete/unittest/: test_command.py  test_complete.py
